fix: add padding to scene-list-controls on mobile baseline

--- a/src/app/components/results-menu/scenes-list/scene/baseline-scene-controls/baseline-scene-controls.component.scss
+++ b/src/app/components/results-menu/scenes-list/scene/baseline-scene-controls/baseline-scene-controls.component.scss
@@ -1,4 +1,11 @@
-
 .icon-margin {
   margin-left: 10px;
+}
+
+.action-buttons--container {
+  display: flex;
+}
+
+.mobile-padding {
+  margin-right: 10px;
 }
